--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -284,10 +284,15 @@
 	</data>
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
+	<key>NSToolbar Configuration com.apple.NSColorPanel</key>
+	<dict>
+		<key>TB Is Shown</key>
+		<integer>1</integer>
+	</dict>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>261 208 796 473 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>237 52 1130 787 0 0 1440 878 </string>
+	<string>155 94 650 597 0 0 1440 878 </string>
 	<key>NeverWarnAboutShortLivedSessions_BEE6C321-DEFF-4600-BBF6-3C6254CA7ABA</key>
 	<true/>
 	<key>NeverWarnAboutShortLivedSessions_BEE6C321-DEFF-4600-BBF6-3C6254CA7ABA_selection</key>
@@ -487,7 +492,7 @@
 			<key>Close Sessions On End</key>
 			<true/>
 			<key>Columns</key>
-			<integer>180</integer>
+			<integer>100</integer>
 			<key>Command</key>
 			<string></string>
 			<key>Cursor Color</key>
@@ -870,7 +875,7 @@
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
-			<integer>50</integer>
+			<integer>30</integer>
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
